--- a/sonasky.yaml
+++ b/sonasky.yaml
@@ -8024,14 +8024,14 @@ pidgeot:
     name: Pidgeot
     description: This user is a Pidgeot!
 mantis:
-  post: TBD
+  post: 3l7ubic7al22g
   realm: prime
   locales:
   - lang: en
     name: Mantis
     description: 'This user is a Mantis! AKA: Mantid, Praying Mantis'
 decidueye:
-  post: TBD
+  post: 3l7ubibak5k2g
   realm: pokemon
   category:
     en: Pokemon
@@ -8040,7 +8040,7 @@ decidueye:
     name: Decidueye
     description: This user is a Decidueye!
 emolga:
-  post: TBD
+  post: 3l7ubia3odk2w
   realm: pokemon
   category:
     en: Pokemon
@@ -8049,7 +8049,7 @@ emolga:
     name: Emolga
     description: This user is an Emolga!
 biyomon:
-  post: TBD
+  post: 3l7ubi6pz3i2w
   realm: prime
   category:
     en: Digimon
@@ -8058,7 +8058,7 @@ biyomon:
     name: Biyomon
     description: This user is a Biyomon!
 squawkabilly:
-  post: TBD
+  post: 3l7ubi4ifug2z
   realm: pokemon
   category:
     en: Pokemon
@@ -8067,7 +8067,7 @@ squawkabilly:
     name: Squawkabilly
     description: This user is a Squawkabilly!
 latias:
-  post: TBD
+  post: 3l7ubh77yaq2w
   realm: pokemon
   category:
     en: Pokemon
@@ -8076,7 +8076,7 @@ latias:
     name: Latias
     description: This user is a Latias!
 miraidon:
-  post: TBD
+  post: 3l7ubhnlmzk2p
   realm: pokemon
   category:
     en: Pokemon
@@ -8085,7 +8085,7 @@ miraidon:
     name: Miraidon
     description: This user is a Miraidon!
 quilava:
-  post: TBD
+  post: 3l7ubi24j4c2q
   realm: pokemon
   category:
     en: Pokemon
